# smart-trAIl

./: .gitignore  README.md
.github/actions/bump_version/: action.yml  bump_version.sh  detect_changes.sh
.github/actions/collect_changed_subdirectories/: action.yml  all_subdirectories.sh  filter_changed_directories.sh
.github/actions/pre_commit/: action.yml  pre_commit_config_exists.sh  run_pre_commit.sh
.github/actions/publish_to_codeartifact/: action.yml
.github/actions/pytest/: action.yml  install_dependencies.sh  run_pytest.sh
.github/workflows/: packages_tests.yml  publish_package.yml  service_pytest_on_merge.yml
documentations/: smart-trAIl-overview.drawio
services/collector/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt  tox.ini
services/collector/src/: controller.py  main.py  models.py  utils.py
services/collector/src/collector/: controller.py  main.py  models.py  utils.py
services/collector/src/collector/database/: __init__.py  generic.py  main.py
services/collector/src/collector/database/mysql/: __init__.py  client.py  env.py  orm.py  utils.py
services/collector/src/collector/scrapers/: __init__.py  generic.py  main.py  requester.py
services/collector/src/collector/scrapers/runraid/: __init__.py  main.py  parser.py  utils.py
services/collector/src/collector/scrapers/sportpro/: __init__.py  data.py  main.py  utils.py
services/collector/src/database/: __init__.py  generic.py  main.py
services/collector/src/database/mysql/: __init__.py  client.py  env.py  orm.py  utils.py
services/collector/src/scrapers/: __init__.py  generic.py  main.py  requester.py
services/collector/src/scrapers/runraid/: __init__.py  main.py  parser.py  utils.py
services/collector/src/scrapers/sportpro/: __init__.py  data.py  main.py  utils.py
services/collector/tests/: context.py  test_controller.py  test_main.py  test_models.py  test_utils.py
services/collector/tests/database/: test_main.py
services/collector/tests/database/mysql/: test_client.py  test_env.py  test_orm.py  test_utils.py
services/collector/tests/scrapers/: test_main.py  test_requester.py
services/collector/tests/scrapers/runraid/: test_main.py  test_parser.py  test_utils.py
services/collector/tests/scrapers/runraid/data/: calendrier.html.test
services/collector/tests/scrapers/sportpro/: test_data.py  test_main.py  test_utils.py
services/collector/tests/scrapers/sportpro/data/: resultats.html.test  tangue.html.test  transvolcano-longue.html.test
services/server/: .dockerignore  Dockerfile  go.mod  go.sum  handler.go  server.go  server_test.go  utils.go
services/server/database/: client.go  env.go  env_test.go  mysql.go  mysql_test.go  orm.go  orm_test.go
